--- a/form-react/src/components/Landingpage.modules.css
+++ b/form-react/src/components/Landingpage.modules.css
@@ -63,3 +63,11 @@
     transform: scale(1.1);
   }
 }
+
+.orderButton:hover {
+  background-color: var(--pink-highlight);
+  color: var(--big-button-colors);
+  -webkit-box-shadow: inset -4px -4px 0px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: inset -4px -4px 0px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: inset -4px -4px 0px 0px rgba(0, 0, 0, 0.4);
+}
