--- a/form-react/src/components/Select_beer.modules.css
+++ b/form-react/src/components/Select_beer.modules.css
@@ -46,6 +46,14 @@ h1 {
   opacity: 0.5;
 }
 
+.plusMinus:hover {
+  background-color: var(--pink-highlight);
+  color: var(--big-button-colors);
+  -webkit-box-shadow: inset -4px -4px 0px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: inset -4px -4px 0px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: inset -4px -4px 0px 0px rgba(0, 0, 0, 0.4);
+}
+
 .add {
   border-radius: 25px;
   padding: 0.5rem;
@@ -59,6 +67,14 @@ h1 {
   color: white;
   font-weight: bold;
   font-family: var(--headings-font);
+}
+
+.add:hover {
+  background-color: var(--pink-highlight);
+  color: var(--big-button-colors);
+  -webkit-box-shadow: inset -4px -4px 0px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: inset -4px -4px 0px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: inset -4px -4px 0px 0px rgba(0, 0, 0, 0.4);
 }
 
 .price {
@@ -102,13 +118,25 @@ article {
   top: 15px;
 }
 
+.information:hover {
+  background-color: var(--pink-highlight);
+  color: var(--big-button-colors);
+  -webkit-box-shadow: inset -3px -3px 0px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: inset -3px -3px 0px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: inset -3px -3px 0px 0px rgba(0, 0, 0, 0.4);
+}
+
 .add:disabled {
   opacity: 0.5;
 }
 
 .changeColor {
   /* FROM https://codepen.io/priosoft/pen/dMryaY */
-  background-image: -webkit-linear-gradient(45deg, transparent 50%, #eb627e 50%);
+  background-image: -webkit-linear-gradient(
+    45deg,
+    transparent 50%,
+    #eb627e 50%
+  );
   background-image: linear-gradient(45deg, transparent 50%, #eb627e 50%);
   background-position: 100%;
   background-size: 250%;
