--- a/form-react/src/components/ShoppingCart.modules.css
+++ b/form-react/src/components/ShoppingCart.modules.css
@@ -19,10 +19,10 @@
   text-align: center;
 }
 #shopping-cart-heading {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   margin-top: 1rem;
-  position: relative;
+  position: fixed;
   right: 1rem;
   top: 1.5rem;
 
@@ -40,10 +40,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
+  position: fixed;
   font-weight: bold;
-  top: 2rem;
-  left: 0.7rem;
+  top: 2.5rem;
+  right: 0.5rem;
   z-index: 200;
 }
 #shopping-wrapper .heading-wrapper {
@@ -80,8 +80,10 @@
   display: flex;
   flex-direction: column;
   z-index: 900;
-  right: 4vw;
+  right: 4.5vw;
+  top: 5vw;
   padding: 1rem;
+  position: fixed;
 }
 
 .cart-popUp button {
@@ -150,6 +152,12 @@
 #shopping-cart .navigationButton {
   width: clamp(50%, 230px, 90%);
   margin: 0.5rem auto;
+}
+
+#shopping-wrapper .navigationButton:hover {
+  -webkit-box-shadow: inset -4px -4px 0px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: inset -4px -4px 0px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: inset -4px -4px 0px 0px rgba(0, 0, 0, 0.4);
 }
 
 #shopping-cart a.navigationButton:disabled {
