--- a/form-react/src/components/PaymentScreen.module.css
+++ b/form-react/src/components/PaymentScreen.module.css
@@ -36,6 +36,12 @@
   display: flex;
   flex-flow: column wrap;
 }
+
+.paymentWrapper button:hover {
+  border: 2px solid var(--bright-purple-bg);
+  border-radius: 5%;
+}
+
 /* iPad verticle */
 @media screen and (min-width: 768px) {
   .roundBckBtn,
